--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "barryvdh/laravel-ide-helper": "^2.5",
         "doctrine/dbal": "v2.7.1",
         "fideloper/proxy": "^4.0",
+        "jeroennoten/laravel-adminlte": "^1.24",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "meng-tian/async-soap-guzzle": "^0.2.4",
