--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:9sepqAn8OSkq8KFuk02lm6QIDVpePR4AmQ/L2OmfPtY=
 APP_DEBUG=true
-APP_URL=http://197.251.5.100
+APP_URL=localhost
 
 LOG_CHANNEL=stack
 
@@ -11,7 +11,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=payment
 DB_USERNAME=admin
-DB_PASSWORD=bencolMBC3$
+DB_PASSWORD=123456
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
